--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
     background-color:wheat;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 header {
     background-color: #333;
     color: white;
@@ -17,6 +21,30 @@ header a {
     color: white;
     text-decoration: none;
 }
+
+header > nav {
+    background-color: #444;
+    text-align: center;
+    display: flex;
+}
+header > nav a {
+    padding: 1em;
+    color: white;
+    text-decoration: none;
+    flex: 1;
+}
+header > nav a:hover {
+    color: #fdaf32;
+}
+header > nav ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+
 
 main > .intro, main > p, main > .resume {
     padding: 1em;
@@ -36,4 +64,62 @@ main > .intro, main > p, main > .resume {
 }
 .second {
     background-color: #ff8c00;
+}
+
+#experience {
+    margin: 1em auto;
+    border: #50affd 2px solid;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: larger;
+}
+
+#experience > h1 {
+    text-decoration: underline;
+}
+
+#experience > ul {
+    list-style-type: circle;
+    font-size: 1.25em;
+    text-align: left;
+    padding-left: 40%;
+}
+
+#skill {
+    margin: 1em auto;
+    border: #ff8c00 2px solid;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: larger;
+}
+
+#skill > h1 {
+    text-decoration: underline;
+}
+
+#skill > ul {
+    list-style-type: circle;
+    font-size: 1.25em;
+    text-align: left;
+    padding-left: 40%;
+}
+
+#contact {
+    margin: auto;
+    padding: 1.5em;
+    background-color: #333;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: larger;
+}
+#contact > h1 {
+    text-decoration: underline;
+}
+#name {
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 1.5em;
+}
+#name > img {
+    margin: 2em auto;
 }
